<resources>
    <string name="app_name">LeagueOfLegions</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="leagueoflegions">League of Legions</string>
    <string name="campaign">Campaign</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="tutorial">Tutorial</string>
    <string name="settings">Settings</string>
    <string name="title_activity_game">Game</string>
</resources>
